--- a/HTML/Appetizers.html
+++ b/HTML/Appetizers.html
@@ -3,64 +3,85 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Appetizers</title>
+    <title>Appetizers - Kimo's Garden Restaurant</title>
     <link rel="icon" type="image/png" href="../Media/Kimo'sGarden-Logo.png">
     <link rel="stylesheet" href="../CSS/StyleAppetizers.css">
 </head>
 <body>
-    <a href="../HTML/Menu.html" class="back-button">← Back to Menu</a>
-    <h1>Appetizers</h1>
-    <div id="Menu-container">
-        <div class="menu-item">
-            <h3>French Fries</h3>
-            <p>Golden fries served with a side of ketchup.</p>
-            <p>Price: $4</p>
+    <header class="header">
+        <div class="header-top">
+            <h1 class="logo"><a href="../index.html">Kimo's Garden</a></h1>
+            <button class="nav-toggle" id="nav-toggle" aria-label="Toggle navigation menu" aria-expanded="false">
+                <span></span>
+                <span></span>
+                <span></span>
+            </button>
         </div>
-        <div class="menu-item">
-            <h3>Curly Fries</h3>
-            <p>Crispy curly fries, served with cocktail sauce.</p>
-            <p>Price: $6</p>
-        </div>
-        <div class="menu-item">
-            <h3>Mozzarella Sticks</h3>
-            <p>4Pc golden mozzarella sticks served with cocktail sauce.</p>
-            <p>Price: $4</p>
-        </div>
-        <div class="menu-item">
-            <h3>Fries and Cheddar</h3>
-            <p>Golden fries topped with melted cheddar cheese.</p>
-            <p>Price: $5.50</p>
-        </div>
-        <div class="menu-item">
-            <h3>Fries and Cheese</h3>
-            <p>Golden fries topped with melted cheese.</p>
-            <p>Price: $6</p>
-        </div>
-        <div class="menu-item">
-            <h3>Dirty Chicken Fries</h3>
-            <p>Golden fries topped with crispy chicken tenders, BBQ sauce, cheddar and cocktail sauce.</p>
-            <p>Price: $8</p>
-        </div>
-        <div class="menu-item">
-            <h3>Nachos</h3>
-            <p>Crispy tortilla chips topped with mozzarella,served with cheddar sauce on the side.</p>
-            <p>Price: $4</p>
-        </div>
-    </div>
-    <a href="https://wa.me/961XXXXXXXX" class="whatsapp-float" target="_blank">
-            <img src="../Media/whatsapp-icon.png" alt="WhatsApp" class="whatsapp-icon">
+        <nav class="navbar" id="navbar" aria-label="Main navigation">
+            <ul class="nav-list">
+                <li><a href="../index.html" class="nav-link">Home</a></li>
+                <li><a href="../HTML/Menu.html" class="nav-link active">Menu</a></li>
+                <li><a href="../HTML/About.html" class="nav-link">About</a></li>
+                <li><a href="../HTML/Contact.html" class="nav-link">Contact</a></li>
+            </ul>
+        </nav>
+    </header>
+
+    <main id="main-content">
+        <section class="category-header">
+            <a href="../HTML/Menu.html" class="back-link">&larr; Back to Menu</a>
+            <h2>Appetizers</h2>
+            <p class="category-description">Delicious starters to kick off your meal</p>
+        </section>
+
+        <section id="menu-container" class="menu-grid">
+            <article class="menu-item">
+                <h3>French Fries</h3>
+                <p>Golden fries served with a side of ketchup.</p>
+                <p class="price">$4</p>
+            </article>
+            <article class="menu-item">
+                <h3>Curly Fries</h3>
+                <p>Crispy curly fries, served with cocktail sauce.</p>
+                <p class="price">$6</p>
+            </article>
+            <article class="menu-item">
+                <h3>Mozzarella Sticks</h3>
+                <p>4Pc golden mozzarella sticks served with cocktail sauce.</p>
+                <p class="price">$4</p>
+            </article>
+            <article class="menu-item">
+                <h3>Fries and Cheddar</h3>
+                <p>Golden fries topped with melted cheddar cheese.</p>
+                <p class="price">$5.50</p>
+            </article>
+            <article class="menu-item">
+                <h3>Fries and Cheese</h3>
+                <p>Golden fries topped with melted cheese.</p>
+                <p class="price">$6</p>
+            </article>
+            <article class="menu-item">
+                <h3>Dirty Chicken Fries</h3>
+                <p>Golden fries topped with crispy chicken tenders, BBQ sauce, cheddar and cocktail sauce.</p>
+                <p class="price">$8</p>
+            </article>
+            <article class="menu-item">
+                <h3>Nachos</h3>
+                <p>Crispy tortilla chips topped with mozzarella, served with cheddar sauce on the side.</p>
+                <p class="price">$4</p>
+            </article>
+        </section>
+    </main>
+
+    <a href="https://wa.me/96171804331?text=Hello%2C%20please%20I%20would%20like%20to%20order." 
+       class="whatsapp-float" 
+       target="_blank" 
+       rel="noopener noreferrer"
+       title="Order via WhatsApp"
+       aria-label="Order via WhatsApp">
+        <img src="../Media/whatsapp-icon.png" alt="WhatsApp icon">
     </a>
-    <script>
-        document.querySelectorAll('a').forEach(link => {
-        link.addEventListener('click', e => {
-            if (link.href.includes('#') || link.target === '_blank') return;
-            e.preventDefault();
-            document.body.classList.add('fade-out');
-            setTimeout(() => {
-            window.location = link.href;
-            }, 400);
-        });
-        });
-    </script>
+
+    <script src="../JS/NavigationScript.js"></script>
 </body>
 </html>
