--- a/HTML/Burgers.html
+++ b/HTML/Burgers.html
@@ -3,74 +3,65 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Burgers</title>
+    <title>Burgers - Kimo's Garden Restaurant</title>
     <link rel="icon" type="image/png" href="../Media/Kimo'sGarden-Logo.png">
     <link rel="stylesheet" href="../CSS/StyleBurgers.css">
 </head>
 <body>
-    <a href="../HTML/Menu.html" class="back-button">← Back to Menu</a>
-    <h1>Burgers</h1>
-    <div id="Menu-container">
-        <div class="menu-item">
-            <h2>Classic Beef Burger</h2>
-            <p>A delicious classic beef burger with iceberg, pickle, tomato, and cocktail sauce.</p>
-            <p>Price: $5</p>
+    <header class="header">
+        <div class="header-top">
+            <h1 class="logo"><a href="../index.html">Kimo's Garden</a></h1>
+            <button class="nav-toggle" id="nav-toggle" aria-label="Toggle navigation menu" aria-expanded="false">
+                <span></span>
+                <span></span>
+                <span></span>
+            </button>
         </div>
-        <div class="menu-item">
-            <h2>Classic Chicken Burger</h2>
-            <p>A classic chicken burger grilled or fried with iceberg, pickle, mayo sauce, and cocktail sauce.</p>
-            <p>Price: $4</p>
-        </div>
-        <div class="menu-item">
-            <h2>Classic Cheese Beef Burger</h2>
-            <p>A classic beef burger with cheddar slice, iceberg, pickle, tomato, and cocktail sauce.</p>
-            <p>Price: $5.50</p>
-        </div>
-        <div class="menu-item">
-            <h2>Classic Cheese Chicken Burger</h2>
-            <p>A classic chicken burger grilled or fried with a slice of cheese, iceberg, pickle, mayo sauce, and tomato.</p>
-            <p>Price: $4.50</p>
-        </div>
-        <div class="menu-item">
-            <h2>Mozzarella Beef Burger</h2>
-            <p>A classic beef burger with a mozzarella patty, iceberg, cheddar, and pickle.</p>
-            <p>Price: $8</p>
-        </div>
-        <div class="menu-item">
-            <h2>Mozzarella Chicken Burger</h2>
-            <p>A classic chicken burger with a mozzarella patty, iceberg, mayo, pickle, and tomato.</p>
-            <p>Price: $7</p>
-        </div>
-        <div class="menu-item">
-            <h2>BBQ Beef Burger</h2>
-            <p>A classic beef burger with BBQ sauce, iceberg, and mozzarella patty.</p>
-            <p>Price: $8</p>
-        </div>
-        <div class="menu-item">
-            <h2>BBQ Chicken Burger</h2>
-            <p>A fried chicken burger with BBQ sauce, iceberg, and mozzarella patty.</p>
-            <p>Price: $7</p>
-        </div>
-        <div class="menu-item">
-            <h2>Kimo's Tasty Burger</h2>
-            <p>A delicious beef burger with iceberg, pickle, tomato, and Kimo's special sauce.</p>
-            <p>Price: $5</p>
-        </div>
-    </div>
-    <a href="https://wa.me/961XXXXXXXX" class="whatsapp-float" target="_blank">
-            <img src="../Media/whatsapp-icon.png" alt="WhatsApp" class="whatsapp-icon">
+        <nav class="navbar" id="navbar" aria-label="Main navigation">
+            <ul class="nav-list">
+                <li><a href="../index.html" class="nav-link">Home</a></li>
+                <li><a href="../HTML/Menu.html" class="nav-link active">Menu</a></li>
+                <li><a href="../HTML/About.html" class="nav-link">About</a></li>
+                <li><a href="../HTML/Contact.html" class="nav-link">Contact</a></li>
+            </ul>
+        </nav>
+    </header>
+
+    <main id="main-content">
+        <section class="category-header">
+            <a href="../HTML/Menu.html" class="back-link">&larr; Back to Menu</a>
+            <h2>Burgers</h2>
+            <p class="category-description">Juicy burgers made with the freshest ingredients</p>
+        </section>
+
+        <section id="menu-container" class="menu-grid">
+            <article class="menu-item">
+                <h3>Classic Burger</h3>
+                <p>Juicy beef patty with lettuce, tomato, and our special sauce.</p>
+                <p class="price">$8</p>
+            </article>
+            <article class="menu-item">
+                <h3>Cheese Burger</h3>
+                <p>Beef patty topped with melted cheddar cheese.</p>
+                <p class="price">$9</p>
+            </article>
+            <article class="menu-item">
+                <h3>Gourmet Burger</h3>
+                <p>Premium beef patty with caramelized onions, bacon, and Swiss cheese.</p>
+                <p class="price">$12</p>
+            </article>
+        </section>
+    </main>
+
+    <a href="https://wa.me/96171804331?text=Hello%2C%20please%20I%20would%20like%20to%20order." 
+       class="whatsapp-float" 
+       target="_blank" 
+       rel="noopener noreferrer"
+       title="Order via WhatsApp"
+       aria-label="Order via WhatsApp">
+        <img src="../Media/whatsapp-icon.png" alt="WhatsApp icon">
     </a>
-    <script>
-        document.querySelectorAll('a').forEach(link => {
-        link.addEventListener('click', e => {
-            if (link.href.includes('#') || link.target === '_blank') return;
-            e.preventDefault();
-            document.body.classList.add('fade-out');
-            setTimeout(() => {
-            window.location = link.href;
-            }, 400);
-        });
-        });
-    </script>
+
+    <script src="../JS/NavigationScript.js"></script>
 </body>
 </html>
