--- a/HTML/Platters.html
+++ b/HTML/Platters.html
@@ -3,32 +3,65 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Platters</title>
-    <link rel="icon" type="image/x-icon" href="../Media/Kimo'sGarden-Logo.png">
+    <title>Platters - Kimo's Garden Restaurant</title>
+    <link rel="icon" type="image/png" href="../Media/Kimo'sGarden-Logo.png">
     <link rel="stylesheet" href="../CSS/StylePlatters.css">
 </head>
 <body>
-    <a href="../HTML/Menu.html" class="back-button">← Back to Menu</a>
-    <h1>Platters</h1>
-    <div id="Menu-container">
-        <div class="menu-item">
-            <h2>Tawouk Platter</h2>
-            <p>Double portion chicken, coleslaw, pickles, garlic, and fries</p>
-            <p>Price: $9</p>
+    <header class="header">
+        <div class="header-top">
+            <h1 class="logo"><a href="../index.html">Kimo's Garden</a></h1>
+            <button class="nav-toggle" id="nav-toggle" aria-label="Toggle navigation menu" aria-expanded="false">
+                <span></span>
+                <span></span>
+                <span></span>
+            </button>
         </div>
-        <div class="menu-item">
-            <h2>Crispy Platter</h2>
-            <p>5 fried chicken crispy, BBQ sauce, cheddar sauce, pickles, fries, and coleslaw</p>
-            <p>Price: $10</p>
-        </div>
-        <div class="menu-item">
-            <h2>Beef Burger Platter</h2>
-            <p>2 beef patty, tomato, pickles, sauce cocktail, served with fries and coleslaw</p>
-            <p>Price: $12</p>
-        </div>
-    </div>
-    <a href="https://wa.me/961XXXXXXXX" class="whatsapp-float" target="_blank">
-            <img src="../Media/whatsapp-icon.png" alt="WhatsApp" class="whatsapp-icon">
+        <nav class="navbar" id="navbar" aria-label="Main navigation">
+            <ul class="nav-list">
+                <li><a href="../index.html" class="nav-link">Home</a></li>
+                <li><a href="../HTML/Menu.html" class="nav-link active">Menu</a></li>
+                <li><a href="../HTML/About.html" class="nav-link">About</a></li>
+                <li><a href="../HTML/Contact.html" class="nav-link">Contact</a></li>
+            </ul>
+        </nav>
+    </header>
+
+    <main id="main-content">
+        <section class="category-header">
+            <a href="../HTML/Menu.html" class="back-link">&larr; Back to Menu</a>
+            <h2>Platters</h2>
+            <p class="category-description">Assorted platters perfect for sharing</p>
+        </section>
+
+        <section id="menu-container" class="menu-grid">
+            <article class="menu-item">
+                <h3>Mixed Grill Platter</h3>
+                <p>Assorted grilled meats served with rice and vegetables. Serves 2-3.</p>
+                <p class="price">$25</p>
+            </article>
+            <article class="menu-item">
+                <h3>Seafood Platter</h3>
+                <p>Selection of fresh seafood with lemon butter sauce and side salad. Serves 2-3.</p>
+                <p class="price">$28</p>
+            </article>
+            <article class="menu-item">
+                <h3>Veggie Feast Platter</h3>
+                <p>Assorted roasted vegetables, grains, and plant-based proteins. Serves 2-3.</p>
+                <p class="price">$20</p>
+            </article>
+        </section>
+    </main>
+
+    <a href="https://wa.me/96171804331?text=Hello%2C%20please%20I%20would%20like%20to%20order." 
+       class="whatsapp-float" 
+       target="_blank" 
+       rel="noopener noreferrer"
+       title="Order via WhatsApp"
+       aria-label="Order via WhatsApp">
+        <img src="../Media/whatsapp-icon.png" alt="WhatsApp icon">
     </a>
+
+    <script src="../JS/NavigationScript.js"></script>
 </body>
 </html>
