--- a/HTML/Wraps.html
+++ b/HTML/Wraps.html
@@ -3,22 +3,65 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Wraps</title>
-    <link rel="icon" type="image/x-icon" href="../Media/Kimo'sGarden-Logo.png">
+    <title>Wraps - Kimo's Garden Restaurant</title>
+    <link rel="icon" type="image/png" href="../Media/Kimo'sGarden-Logo.png">
     <link rel="stylesheet" href="../CSS/StyleWraps.css">
 </head>
 <body>
-    <a href="../HTML/Menu.html" class="back-button">← Back to Menu</a>
-    <h1>Wraps</h1>
-    <div id="Menu-container">
-        <div class="menu-item">
-            <h3>Boneless Wrap</h3>
-            <p>Boneless chicken, tortilla bread, mayo, cheddar sauce, BBQ sauce, iceberg, and chips</p>
-            <p>Price: $8</p>
+    <header class="header">
+        <div class="header-top">
+            <h1 class="logo"><a href="../index.html">Kimo's Garden</a></h1>
+            <button class="nav-toggle" id="nav-toggle" aria-label="Toggle navigation menu" aria-expanded="false">
+                <span></span>
+                <span></span>
+                <span></span>
+            </button>
         </div>
-    </div>
-    <a href="https://wa.me/961XXXXXXXX" class="whatsapp-float" target="_blank">
-            <img src="../Media/whatsapp-icon.png" alt="WhatsApp" class="whatsapp-icon">
+        <nav class="navbar" id="navbar" aria-label="Main navigation">
+            <ul class="nav-list">
+                <li><a href="../index.html" class="nav-link">Home</a></li>
+                <li><a href="../HTML/Menu.html" class="nav-link active">Menu</a></li>
+                <li><a href="../HTML/About.html" class="nav-link">About</a></li>
+                <li><a href="../HTML/Contact.html" class="nav-link">Contact</a></li>
+            </ul>
+        </nav>
+    </header>
+
+    <main id="main-content">
+        <section class="category-header">
+            <a href="../HTML/Menu.html" class="back-link">&larr; Back to Menu</a>
+            <h2>Wraps</h2>
+            <p class="category-description">Flavorful wraps filled with fresh ingredients</p>
+        </section>
+
+        <section id="menu-container" class="menu-grid">
+            <article class="menu-item">
+                <h3>Chicken Wrap</h3>
+                <p>Grilled chicken with peppers, onions, and creamy sauce in a soft wrap.</p>
+                <p class="price">$8</p>
+            </article>
+            <article class="menu-item">
+                <h3>Veggie Wrap</h3>
+                <p>Roasted vegetables, hummus, and fresh herbs in a spinach wrap.</p>
+                <p class="price">$7</p>
+            </article>
+            <article class="menu-item">
+                <h3>Spicy Shrimp Wrap</h3>
+                <p>Sautéed shrimp with spicy mayo, lettuce, and tomato.</p>
+                <p class="price">$10</p>
+            </article>
+        </section>
+    </main>
+
+    <a href="https://wa.me/96171804331?text=Hello%2C%20please%20I%20would%20like%20to%20order." 
+       class="whatsapp-float" 
+       target="_blank" 
+       rel="noopener noreferrer"
+       title="Order via WhatsApp"
+       aria-label="Order via WhatsApp">
+        <img src="../Media/whatsapp-icon.png" alt="WhatsApp icon">
     </a>
+
+    <script src="../JS/NavigationScript.js"></script>
 </body>
 </html>
