--- a/HTML/About.html
+++ b/HTML/About.html
@@ -3,49 +3,60 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>About</title>
+    <title>About - Kimo's Garden Restaurant</title>
     <link rel="icon" type="image/png" href="../Media/Kimo'sGarden-Logo.png">
-    <link rel="stylesheet" href="../CSS/StyleAbout.Css">
+    <link rel="stylesheet" href="../CSS/StyleAbout.css">
 </head>
 <body>
-    <aside class="sidebar">
-        <h2>Kimo’s Garden</h2>
-        <ul>
-            <li><a href="../index.html">Home</a></li>
-            <li><a href="../HTML/Menu.html">Menu</a></li>
-            <li><a href="../HTML/About.html">About</a></li>
-            <li><a href="../HTML/Contact.html">Contact</a></li>
-        </ul>
-    </aside>
-    <div id="About-container">
-        <h2>About us</h2>
-        <p>
-            Welcome to Kimo’s Garden — where delicious bites meet feel-good vibes! 🌿✨  
-            Tucked away in the heart of Kahale,
-            our family-owned spot started as Chef Kimo’s dream: 
-            a place where his love for food and the outdoors could come to life. 
-            What began three years ago as a small passion project has grown into a cozy escape full of flavor, 
-            fun, and friendly faces.  
-            Whether you’re here for a quick bite, 
-            a chill night out, or just to soak in the green surroundings, 
-            Kimo’s Garden is all about homemade goodness and warm, 
-            welcoming energy. Come hungry, leave smiling — that’s how we do it! 💚🍔🌿
-        </p>
-    </div>
-    <a href="https://wa.me/96171804331?text=Hello%2C%20please%20I%20would%20like%20to%20order." class="whatsapp-float" target="_blank">
-            <img src="../Media/whatsapp-icon.png" alt="WhatsApp" class="whatsapp-icon">
+    <header class="header">
+        <div class="header-top">
+            <h1 class="logo"><a href="../index.html">Kimo's Garden</a></h1>
+            <button class="nav-toggle" id="nav-toggle" aria-label="Toggle navigation menu" aria-expanded="false">
+                <span></span>
+                <span></span>
+                <span></span>
+            </button>
+        </div>
+        <nav class="navbar" id="navbar" aria-label="Main navigation">
+            <ul class="nav-list">
+                <li><a href="../index.html" class="nav-link">Home</a></li>
+                <li><a href="../HTML/Menu.html" class="nav-link">Menu</a></li>
+                <li><a href="../HTML/About.html" class="nav-link active">About</a></li>
+                <li><a href="../HTML/Contact.html" class="nav-link">Contact</a></li>
+            </ul>
+        </nav>
+    </header>
+
+    <main id="main-content">
+        <article id="about-container">
+            <h2>About Kimo's Garden</h2>
+            <section class="about-content">
+                <p>
+                    Welcome to Kimo's Garden — where delicious bites meet feel-good vibes! 🌿✨  
+                </p>
+                <p>
+                    Tucked away in the heart of Kahale, our family-owned spot started as Chef Kimo's dream: 
+                    a place where his love for food and the outdoors could come to life. 
+                    What began three years ago as a small passion project has grown into a cozy escape full of flavor, 
+                    fun, and friendly faces.
+                </p>
+                <p>
+                    Whether you're here for a quick bite, a chill night out, or just to soak in the green surroundings, 
+                    Kimo's Garden is all about homemade goodness and warm, welcoming energy. Come hungry, leave smiling — that's how we do it! 💚🍔🌿
+                </p>
+            </section>
+        </article>
+    </main>
+
+    <a href="https://wa.me/96171804331?text=Hello%2C%20please%20I%20would%20like%20to%20order." 
+       class="whatsapp-float" 
+       target="_blank" 
+       rel="noopener noreferrer"
+       title="Order via WhatsApp"
+       aria-label="Order via WhatsApp">
+        <img src="../Media/whatsapp-icon.png" alt="WhatsApp icon">
     </a>
-    <script>
-        document.querySelectorAll('a').forEach(link => {
-        link.addEventListener('click', e => {
-            if (link.href.includes('#') || link.target === '_blank') return;
-            e.preventDefault();
-            document.body.classList.add('fade-out');
-            setTimeout(() => {
-            window.location = link.href;
-            }, 400);
-        });
-        });
-    </script>
+
+    <script src="../JS/NavigationScript.js"></script>
 </body>
 </html>
